# ai-trading-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_hyperliquid.py  test_mainnet_check.py  test_taapi.py
docs/: ARCHITECTURE.md
src/: config_loader.py  main.py
src/agent/: decision_maker.py
src/indicators/: taapi_client.py
src/trading/: hyperliquid_api.py
src/utils/: __init__.py  formatting.py  prompt_utils.py
trading_agent/: __init__.py
